--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,9 +1,17 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap");
 
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+  :root {
+    --swiper-scrollbar-bottom: -40px;
+    --swiper-scrollbar-size: 8px;
+    --swiper-scrollbar-drag-bg-color: #2e67de;
+  }
+}
 
 @layer components {
   .btn {
