feat: added update-css-vars function, updated styles

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -12,6 +12,7 @@
     --swiper-pagination-left: 56px;
     --swiper-pagination-bullet-horizontal-gap: 0;
     --swiper-scrollbar-drag-bg-color: #2e67de;
+    --swiper-pagination-bullet-inactive-color: #2e67de;
   }
 
   html,
@@ -40,11 +41,4 @@
   .input.input-medium {
     @apply h-14 py-5 pl-12 pr-6;
   }
-}
-
-.swiper-pagination-fraction,
-.swiper-pagination-custom,
-.swiper-horizontal > .swiper-pagination-bullets,
-.swiper-pagination-bullets.swiper-pagination-horizontal {
-  width: 8px;
 }
