--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -31,7 +31,7 @@
   }
 
   .btn.btn-primary {
-    @apply bg-blue-100 border-blue-50;
+    @apply bg-blue-100 border-blue-50 hover:bg-blue-200 hover:border-blue-100;
   }
 
   .input {
