--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -37,12 +37,20 @@
     @apply bg-blue-100 border-blue-50 hover:bg-blue-200 hover:border-blue-100;
   }
 
+  .btn.btn-outline.btn-primary {
+    @apply bg-transparent border-blue-100 text-blue-100;
+  }
+
   .input {
-    @apply border border-gray-50 rounded-25 placeholder:text-sm placeholder:font-medium text-black hover:ring-inset hover:ring-2 transition-all duration-300;
+    @apply border outline-none border-gray-50 rounded-25 placeholder:text-sm placeholder:font-medium text-black hover:ring-inset hover:ring-2 transition-all duration-300;
   }
 
   .input.input-medium {
     @apply h-14 py-5 px-6;
+  }
+
+  .input.input-small {
+    @apply h-12 py-4 px-6;
   }
 
   .input-subscribe.input-medium {
